--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+
     <a href="/recipes/pizza.html">Homemade Pizza Recipe</a>
    
     <div class="picture1"> <img src="/img/gordon.jpg" alt="Gordon Ramsay">
