--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="/recipes/pizza.html">Homemade Pizza Recipe</a>
+    
    
-    <div class="picture1"> <img src="/img/gordon.jpg" alt="Gordon Ramsay">
+    <div class="picture1"> 
+        <img src="/img/gordon-ramsay-chef.gif" alt="dance">
     </div>
+    <h2>Gordon Ramsay gave it 1 *, go ahead and click it</h2>
+    <div class="linkRecipe1"> <a href="/recipes/pizza.html">Homemade Pizza Recipe</a></div>
    
 </body>
 </html>
