--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="picture1"> 
         <img src="/img/gordon-ramsay-chef.gif" alt="dance">
     </div>
-    <h2>Gordon Ramsay gave it 1 *, go ahead and click it</h2>
+    <h2> <em>Gordon Ramsay </em> gave it 1 star, go ahead and <a href="/recipes/pizza.html">click it</a> </h2>
     <div class="linkRecipe1"> <a href="/recipes/pizza.html">Homemade Pizza Recipe</a></div>
-   
+   <img src="/img/gordon.jpg" alt="">
 </body>
 </html>
