--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,5 +9,13 @@
 <body>
     <h1>Homemade Pizza</h1>
     <img src="/img/pizza.jpg" alt="pizaaa">
+   <ol> Recipe
+    <li>Tomato sauce</li><li>Extra virgin olive oil</il>
+        
+   <li>Mushrooms</li>
+   <li>Italian pepperoncini</li>
+   <li>Italian sausage</li>
+   <li>Sliced black olives</li>
+   <li>Firm mozzarella cheese,</li></ol>
 </body>
 </html>
