--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -18,5 +18,6 @@
    <li>Italian sausage</li>
    <li>Sliced black olives</li>
    <li>Firm mozzarella cheese,</li></ol>
+   <a href="index.html">home</a>
 </body>
 </html>
