Add http link to image

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    
-   
     <div class="picture1"> 
-        <img src="/img/gordon-ramsay-chef.gif" alt="dance">
+        <img src="https://i.pinimg.com/originals/af/13/1f/af131f009a820c964ceb7d8b7010d979.gif" alt="dance">
     </div>
     <h2> <em>Gordon Ramsay </em> gave it 1 star, go ahead and <a href="/recipes/pizza.html">click it</a> </h2>
     <div class="linkRecipe1"> <a href="/recipes/pizza.html">Homemade Pizza Recipe</a></div>
